refactor: reverse the retrieved messages in TranscriberFetcher instead of TranscriberClient